[package]
name = "async-graph-exercise-serverless-api"
version = "0.1.0"
authors = ["modulitos <modulitos@users.noreply.github.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
serde = { version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
tokio = { version = "0.2.21", features = ["macros", "blocking", "rt-threaded"]}
log = "^0.4"
simple_logger = "^1"
once_cell = "1.4.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
